infrastructure/kubernetes/posts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: billycatchpole/posts:0.0.1
