infrastructure/kubernetes/comments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  type: NodePort
  selector:
      app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
