infrastructure/kubernetes/query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  type: NodePort
  selector:
      app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
