infrastructure/kubernetes/ingress-services.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths: 
          - path: /posts/create
            backend:
              serviceName: post-service-cip
              servicePort: 4000
          - path: /posts
            backend:
              serviceName: query-service
              servicePort: 4002
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-service-cip
              servicePort: 4001
          - path: /?(.*)
            backend:
              serviceName: frontend-service
              servicePort: 3000
